Changelog
=========

Changes in libuca 1.3
---------------------

### Minor changes

- Added `sensor-pixel-width` and `sensor-pixel-height` to describe the cameras
  pixel size in meters.


Changes in libuca 1.2
---------------------

### API break

The interface of uca_camera_grab() has changed. The buffer must be provided as a
void pointer (or gpointer in GLib speak), _not_ the address of a void pointer.
Furthermore, uca_camera_grab() returns TRUE if grabbing an image was successful
and FALSE if not.

The plugin manager does not call the plugins "constructor" function directly but
instantiates it via the GInitable initialization function. Therefore, all
plugins must implement initialization code in the objects init function and flag
errors in the init method from the GInitable interface.

### Restructuring of tools

All binary sources are now found in bin/, with the GUI application now
split off from the command line tools. Also, all tools are now installed with
a common "uca-" prefix, e.g. `uca-camera-control` and `uca-grab`.

### Minor changes

- Improved plugin packaging: Plugins can now specify a version number
  independent of libuca which is reflected when building RPM packages.
- `uca-grab` is a lot more useful now and gained `--num-frames` and `--duration`
  parameters as well as the possibility to write frames as a single multi-page
  TIFF file.
- Bug fixes for Dexela, pco and UFO cameras.


Changes in libuca 1.1
---------------------

### Plugin System

A new plugin manager is used to instantiate camera objects from a shared
library. Instead of calling `uca_camera_new`, a plugin manager is created that
looks in pre- and user-defined directories for DSOs that match
`libuca[A-Za-z].so` and used to instantiate:

    UcaPluginManager *manager;
    UcaCamera *camera;

    manager = uca_plugin_manager_new ();
    camera = uca_plugin_manager_get_camera (manager, "foo", &error);

The plugin manager adds a dependency on GModule (pkg-config package